# azubischnelldurchlauf

./: README.md
azubi-schnelldurchlauf/: docker-compose.yml  pyproject.toml
azubi-schnelldurchlauf/azubi_schnelldurchlauf/: Temperaturmonitor.py  __init__.py  __main__.py
azubi-schnelldurchlauf/conf/: settings.yaml
azubi-schnelldurchlauf/structurizr/: docker-compose.yml  run.py  structurizr.dsl
temperaturserver/: pyproject.toml
temperaturserver/temperaturserver/: __init__.py
